--- a/index.html
+++ b/index.html
@@ -14,22 +14,41 @@
 		<link rel="stylesheet" href="/css/normalize.css" />
 		<link rel="stylesheet" href="/css/style.css" />
 	</head>
-	<body>
+	<body id="body">
 		<header class="header">
 			<div class="container">
-				<nav>
+				<nav class="nav">
 					<ul class="menu">
-						<li class="menu__item"><a href="#">Автомобили</a></li>
-						<li class="menu__item"><a href="#">Аксессуары</a></li>
-						<li class="menu__item"><a href="#">Прочее</a></li>
+						<li class="menu__item">
+							<a href="#catalog-1" class="smooth-scroll-link">Автомобили</a>
+						</li>
+						<li class="menu__item">
+							<a href="#catalog-2" class="smooth-scroll-link">Мотоциклы</a>
+						</li>
+						<li class="menu__item">
+							<a href="#catalog-3" class="smooth-scroll-link">Аксессуары</a>
+						</li>
 					</ul>
+					<div class="theme-switch">
+						<span>Ночная тема</span>
+						<label class="switch" id="switch">
+							<input type="checkbox" id="themeToggle" />
+							<span class="slider round"></span>
+						</label>
+					</div>
 				</nav>
+				<button class="burger-btn
+				" id="burgerBtn">
+					<span></span>
+					<span></span>
+					<span></span>
+				</button>
 			</div>
 		</header>
 		<main class="main">
 			<div class="container">
 				<h1 class="title">Каталог продукции</h1>
-				<div class="catalog">
+				<div class="catalog" id="catalog-1">
 					<h2 class="catalog__title">Автомобили</h2>
 					<ul class="catalog__list">
 						<li class="item">
@@ -56,24 +75,338 @@
 							<div class="item__date">01.01.2002</div>
 							<button class="item__button button">Купить</button>
 						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/kia-1.png" alt="car" />
+							</div>
+							<div class="item__title">Kia deluxe edition</div>
+							<div class="item__date">01.01.2012</div>
+							<button class="item__button button">Купить</button>
+						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/kia-2.png" alt="car" />
+							</div>
+							<div class="item__title">Kia standart edition</div>
+							<div class="item__date">01.04.2022</div>
+							<button class="item__button button">Купить</button>
+						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/kia-3.png" alt="car" />
+							</div>
+							<div class="item__title">Kia bomj edition</div>
+							<div class="item__date">01.01.2002</div>
+							<button class="item__button button">Купить</button>
+						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/kia-1.png" alt="car" />
+							</div>
+							<div class="item__title">Kia deluxe edition</div>
+							<div class="item__date">01.01.2012</div>
+							<button class="item__button button">Купить</button>
+						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/kia-2.png" alt="car" />
+							</div>
+							<div class="item__title">Kia standart edition</div>
+							<div class="item__date">01.04.2022</div>
+							<button class="item__button button">Купить</button>
+						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/kia-3.png" alt="car" />
+							</div>
+							<div class="item__title">Kia bomj edition</div>
+							<div class="item__date">01.01.2002</div>
+							<button class="item__button button">Купить</button>
+						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/kia-1.png" alt="car" />
+							</div>
+							<div class="item__title">Kia deluxe edition</div>
+							<div class="item__date">01.01.2012</div>
+							<button class="item__button button">Купить</button>
+						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/kia-2.png" alt="car" />
+							</div>
+							<div class="item__title">Kia standart edition</div>
+							<div class="item__date">01.04.2022</div>
+							<button class="item__button button">Купить</button>
+						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/kia-3.png" alt="car" />
+							</div>
+							<div class="item__title">Kia bomj edition</div>
+							<div class="item__date">01.01.2002</div>
+							<button class="item__button button">Купить</button>
+						</li>
+					</ul>
+				</div>
+				<div class="catalog" id="catalog-2">
+					<h2 class="catalog__title">Мотоциклы</h2>
+					<ul class="catalog__list">
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/moto-1.png" alt="moto" />
+							</div>
+							<div class="item__title">Moto deluxe edition</div>
+							<div class="item__date">01.01.2012</div>
+							<button class="item__button button">Купить</button>
+						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/moto-2.png" alt="moto" />
+							</div>
+							<div class="item__title">Moto standart edition</div>
+							<div class="item__date">01.04.2022</div>
+							<button class="item__button button">Купить</button>
+						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/moto-3.png" alt="moto" />
+							</div>
+							<div class="item__title">Moto bomj edition</div>
+							<div class="item__date">01.01.2002</div>
+							<button class="item__button button">Купить</button>
+						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/moto-1.png" alt="moto" />
+							</div>
+							<div class="item__title">Moto deluxe edition</div>
+							<div class="item__date">01.01.2012</div>
+							<button class="item__button button">Купить</button>
+						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/moto-2.png" alt="moto" />
+							</div>
+							<div class="item__title">Moto standart edition</div>
+							<div class="item__date">01.04.2022</div>
+							<button class="item__button button">Купить</button>
+						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/moto-3.png" alt="moto" />
+							</div>
+							<div class="item__title">Moto bomj edition</div>
+							<div class="item__date">01.01.2002</div>
+							<button class="item__button button">Купить</button>
+						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/moto-1.png" alt="moto" />
+							</div>
+							<div class="item__title">Moto deluxe edition</div>
+							<div class="item__date">01.01.2012</div>
+							<button class="item__button button">Купить</button>
+						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/moto-2.png" alt="moto" />
+							</div>
+							<div class="item__title">Moto standart edition</div>
+							<div class="item__date">01.04.2022</div>
+							<button class="item__button button">Купить</button>
+						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/moto-3.png" alt="moto" />
+							</div>
+							<div class="item__title">Moto bomj edition</div>
+							<div class="item__date">01.01.2002</div>
+							<button class="item__button button">Купить</button>
+						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/moto-1.png" alt="moto" />
+							</div>
+							<div class="item__title">Moto deluxe edition</div>
+							<div class="item__date">01.01.2012</div>
+							<button class="item__button button">Купить</button>
+						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/moto-2.png" alt="moto" />
+							</div>
+							<div class="item__title">Moto standart edition</div>
+							<div class="item__date">01.04.2022</div>
+							<button class="item__button button">Купить</button>
+						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/moto-3.png" alt="moto" />
+							</div>
+							<div class="item__title">Moto bomj edition</div>
+							<div class="item__date">01.01.2002</div>
+							<button class="item__button button">Купить</button>
+						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/moto-1.png" alt="moto" />
+							</div>
+							<div class="item__title">Moto deluxe edition</div>
+							<div class="item__date">01.01.2012</div>
+							<button class="item__button button">Купить</button>
+						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/moto-2.png" alt="moto" />
+							</div>
+							<div class="item__title">Moto standart edition</div>
+							<div class="item__date">01.04.2022</div>
+							<button class="item__button button">Купить</button>
+						</li>
+					</ul>
+				</div>
+				<div class="catalog" id="catalog-3">
+					<h2 class="catalog__title">Аксессуары</h2>
+					<ul class="catalog__list">
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/acc-1.png" alt="accesories" />
+							</div>
+							<div class="item__title">Аксессуар</div>
+							<div class="item__date">01.01.2012</div>
+							<button class="item__button button">Купить</button>
+						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/acc-2.png" alt="accesories" />
+							</div>
+							<div class="item__title">Аксессуар</div>
+							<div class="item__date">01.01.2012</div>
+							<button class="item__button button">Купить</button>
+						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/acc-4.png" alt="accesories" />
+							</div>
+							<div class="item__title">Аксессуар</div>
+							<div class="item__date">01.01.2012</div>
+							<button class="item__button button">Купить</button>
+						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/acc-3.png" alt="accesories" />
+							</div>
+							<div class="item__title">Аксессуар</div>
+							<div class="item__date">01.01.2012</div>
+							<button class="item__button button">Купить</button>
+						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/acc-2.png" alt="accesories" />
+							</div>
+							<div class="item__title">Аксессуар</div>
+							<div class="item__date">01.01.2012</div>
+							<button class="item__button button">Купить</button>
+						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/acc-1.png" alt="accesories" />
+							</div>
+							<div class="item__title">Аксессуар</div>
+							<div class="item__date">01.01.2012</div>
+							<button class="item__button button">Купить</button>
+						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/acc-3.png" alt="accesories" />
+							</div>
+							<div class="item__title">Аксессуар</div>
+							<div class="item__date">01.01.2012</div>
+							<button class="item__button button">Купить</button>
+						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/acc-4.png" alt="accesories" />
+							</div>
+							<div class="item__title">Аксессуар</div>
+							<div class="item__date">01.01.2012</div>
+							<button class="item__button button">Купить</button>
+						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/acc-1.png" alt="accesories" />
+							</div>
+							<div class="item__title">Аксессуар</div>
+							<div class="item__date">01.01.2012</div>
+							<button class="item__button button">Купить</button>
+						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/acc-3.png" alt="accesories" />
+							</div>
+							<div class="item__title">Аксессуар</div>
+							<div class="item__date">01.01.2012</div>
+							<button class="item__button button">Купить</button>
+						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/acc-2.png" alt="accesories" />
+							</div>
+							<div class="item__title">Аксессуар</div>
+							<div class="item__date">01.01.2012</div>
+							<button class="item__button button">Купить</button>
+						</li>
+						<li class="item">
+							<div class="item__img">
+								<img src="./img/acc-4.png" alt="accesories" />
+							</div>
+							<div class="item__title">Аксессуар</div>
+							<div class="item__date">01.01.2012</div>
+							<button class="item__button button">Купить</button>
+						</li>
 					</ul>
 				</div>
 			</div>
-			<div id="purchaseForm" class="purchase-form-wrapper" style="display: none">
+			<div id="purchaseForm" class="purchase-form-wrapper">
 				<form class="form" id="form">
 					<div class="form__row">
 						<label for="quantityInput">Количество:</label>
-						<input class="quantity-input" type="number" id="quantityInput" min="1" required />
+						<input
+							class="quantity-input"
+							type="number"
+							id="quantityInput"
+							min="1"
+							required
+						/>
 					</div>
 					<div class="form__row">
 						<label>Цвет:</label>
-						<input class="radio-input" type="radio" name="color" value="red" required checked />Красный
-            <input class="radio-input" type="radio" name="color" value="blue" /> Синий
-						<input class="radio-input" type="radio" name="color" value="green" /> Зеленый
+						<input
+							class="radio-input"
+							type="radio"
+							name="color"
+							value="red"
+							required
+							checked
+						/>Красный
+						<input class="radio-input" type="radio" name="color" value="blue" />
+						Синий
+						<input
+							class="radio-input"
+							type="radio"
+							name="color"
+							value="green"
+						/>
+						Зеленый
 					</div>
 					<div class="form__row">
 						<label for="commentInput">Комментарий:</label>
-						<textarea class="comment-input" id="commentInput" maxlength="2000"></textarea>
+						<textarea
+							class="comment-input"
+							id="commentInput"
+							maxlength="2000"
+						></textarea>
 					</div>
 					<div class="form__row">
 						<button type="submit">Купить</button>
@@ -81,7 +414,30 @@
 					</div>
 				</form>
 			</div>
+			<button
+				id="scrollToTopButton"
+				class="jumping-button"
+				onclick="scrollToTop()"
+			>
+				Наверх
+			</button>
 		</main>
+		<footer class="footer">
+			<div class="container">
+				<ul class="menu">
+					<li class="menu__item">
+						<a href="#catalog-1" class="smooth-scroll-link">Автомобили</a>
+					</li>
+					<li class="menu__item">
+						<a href="#catalog-2" class="smooth-scroll-link">Мотоциклы</a>
+					</li>
+					<li class="menu__item">
+						<a href="#catalog-3" class="smooth-scroll-link">Аксессуары</a>
+					</li>
+				</ul>
+				<div class="footer__text">(c) Какой-то верстальщик, все права защищены, но это не точно</div>
+			</div>
+		</footer>
 		<script src="/js/main.js"></script>
 	</body>
 </html>
