fix: fix some paths

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 			href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="/css/normalize.css" />
-		<link rel="stylesheet" href="/css/style.css" />
+		<link rel="stylesheet" href="./css/normalize.css" />
+		<link rel="stylesheet" href="./css/style.css" />
 	</head>
 	<body id="body">
 		<header class="header">
@@ -438,6 +438,6 @@
 				<div class="footer__text">(c) Какой-то верстальщик, все права защищены, но это не точно</div>
 			</div>
 		</footer>
-		<script src="/js/main.js"></script>
+		<script src="./js/main.js"></script>
 	</body>
 </html>
